# snoofer

./: Cargo.toml  Dioxus.toml  Makefile
src/: main.rs  styles.css
src/looks/: head.rs  logs.rs  mod.rs  packet_detail_window.rs  packets_list.rs
src/looks/styles/: entry_page.css
src/parser/: filter.rs  mod.rs  parser_packet.rs
src/styles/: main.css
