[package]
name = "snooffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-stream = "0.3.5"
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
pcap = { version = "1.1.0", features = ["capture-stream"] }
pktparse = "0.7.1"
pretty_assertions = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
