[package]
name = "snooffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
pcap = { version = "1.1.0", features = ["capture-stream"] }
pktparse = "0.7.1"
tokio = "1.35.1"
